# Project

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 0128cee31523_add_user_and_salaries_tables.py  fb81e10a7b67_add.py
app/router/: salaries_router.py  user_router.py
app/schemas/: base.py  salaries.py  user.py
app/test/: conftest.py
app/test/router/: test_salaries_router.py  test_user_router.py
app/test/schemas/: test_salaries_schema.py  test_user_schema.py
app/test/use_cases/: test_salaries_use_cases.py  test_user_use_cases.py
app/use_cases/: salaries.py  user.py
