[tool.poetry]
name = "projeto1"
version = "0.1.0"
description = ""
authors = ["Leticia Zullo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
aiohttp = "^3.8.5"
fastapi = "^0.101.0"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
pytest = "^7.4.0"
alembic = "^1.11.2"
python-decouple = "^3.8"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
